--- a/incomexpensesapi/requirements.txt
+++ b/incomexpensesapi/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.10
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.0.1
+django-cors-headers==3.10.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
